objects/ChatResponse__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EndChat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>End Chat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessageType__c</fullName>
        <defaultValue>&quot;inbound&quot;</defaultValue>
        <inlineHelpText>bookend-start  // inbound  //  outbound  //  bookend-end</inlineHelpText>
        <label>Message Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prompt__c</fullName>
        <label>Prompt</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TypingTime__c</fullName>
        <inlineHelpText>in milliseconds</inlineHelpText>
        <label>Typing Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Chat Response</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Response__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Responses</fullName>
        <columns>NAME</columns>
        <columns>Keyword__c</columns>
        <columns>Response__c</columns>
        <columns>TypingTime__c</columns>
        <columns>MessageType__c</columns>
        <columns>Prompt__c</columns>
        <filterScope>Mine</filterScope>
        <label>All Responses</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chat Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>